[tool.poetry]
name = "linkml-project-template"
version = "0.1.0"
description = "Enter description of your project here"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.2.6"
schemasheets = "^0.1.10"
prefixcommons = "^0.1.9"
pandas = "^1.4.2"
db-to-sqlite = "^1.4"
psycopg2 = "^2.9.3"
ontodev-cogs = "^0.3.3"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mkdocs-material = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
